1998-07-06  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas-image.[ch]: New imlib image type for the canvas.

	* libgnomeui.h: 
	* Makefile.am: Added gnome-canvas-image.[ch].

	* gnome-canvas-rect-ellipse.c (gnome_canvas_re_realize): 
	* gnome-canvas-text.c (gnome_canvas_text_realize): Call the
	reconfigure method instead of the explicit function.

	* gnome-canvas.c (gnome_canvas_item_move): Take care of incomplete
	item type implementations by warning about unimplemented method.
	(gnome_canvas_group_draw): Test for presence of draw method.
	(gnome_canvas_group_point): Test for presence of point method, and
	use an initialized point_item in case the method is incompletely
	implemented.
	(gnome_canvas_update_now): Now we flush the X queue here to ensure
	repaint.

	* gnome-canvas-text.c (gnome_canvas_text_translate): Implemented
	translate method for text items.

Tue Jul  7 00:03:21 1998  John Ellis  <johne@bellatlantic.net>

	* gnome-dentry-edit.c (gnome_dentry_get_dentry): fixed segfault.
	(gnome_dentry_edit_set_icon): icons now display when changed.
	* gnome-icon-sel.[ch] (gnome_icon_selection_show_icons): new
	function, call this after adding all directories so the progress
	bar updates correctly.

Mon Jul  6 22:46:58 1998  Havoc Pennington  <hp@pobox.com>

	* gnome-appbar.h, gnome-appbar.c: A tentative start at this
	widget inspired by Mozilla; eventually it will be a lot nicer
	hopefully.
        * gnome-app-util.h, gnome-app-util.c (gnome_app_set_status,
	gnome_app_push_status, gnome_app_pop_status): Removed functions.
	(gnome_app_progress_update): renamed to set_progress
	* gnome-app-util.c: Changed to use AppBar
	* libgnomeui.h, Makefile.am: Add gnome-appbar.[ch]
	* gnome-app.c: #ifdef GTK_RELIEF_NONE around toolbar relief stuff.
	* gnome-preferences.c: I mispelled the menubar handlebox config
	key.
	
1998-07-06  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-app-helper.c (gnome_app_find_menu_pos): can look for separators.